# duckdb-file-sql

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QC_APPENDIX_B.md  README.md  SECURITY.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  render.yaml  seo.css  sitemap.xml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  worker-image.yml
apps/worker/: Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
apps/worker/app/: __init__.py  duckdb_engine.py  main.py  models.py  safety.py
apps/worker/filesql_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: test_health.py  test_query_api.py
artifacts/: latency-report.json  lighthouse.json  section7-report.json
assets/: browser-session-CK03h-xS.js  browser-session-DxkgYQVE.js  dist-ALhq2r7z.js  dist-Borgo6LF.js  duckdb-browser-C2_XuAsU.js  index-A8pA2zc1.css  index-BaBUW0Sw.js  index-u2LxO0ml.js  serialization-BaUKPmn5.js
duckdb-online/: index.html
samples/: ecommerce-events.csv  manifest.json
scripts/: generate-parquet-benchmark.py  latency-qualification.mjs  section7-qualification.mjs
sql-on-jsonl/: index.html
sqlite-online-query/: index.html
