[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filesql-worker"
version = "0.1.0"
description = "FastAPI worker for FileSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4.1",
  "fastapi>=0.116.1",
  "pydantic>=2.11.7",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
